# openplex

./: .gitignore  CMakeLists.txt  Doxyfile  macdeps.sh
atrash/: Sounds.hh
atrash/media/: audio.cc  audio.h  audiofile.cc  audiofile.h  audiosfx.h  audiosong.h
data/levels/: anycheck.val  do  graph.p  player.lst
design/: design.puml
doc/: FPS.md  design.puml  gameloop.puml  gamestate.puml  intents.puml
src/: main.cc
src/assets/: Fonts.hh  Levels.hh  Sounds.hh  Sprites.hh
src/assets/fonts/: font.cc  font.h
src/assets/levels/: LevelDecoder.hh  levelset.cc  levelset.h  loadlevel.cc  loadlevel.h
src/assets/media/: audio.h  audiofile.cc  audiofile.h  audiosfx.cc  audiosfx.h  audiosong.cc  audiosong.h  effects.h
src/assets/sprites/: readpng.cc  readpng.h  sprites.cc  sprites.h
src/common/: Style.h  SystemClock.hh  configuration.cc  configuration.h  confrw.cc  confrw.h  fileio.cc  fileio.h  globals.cc  globals.h  includes.h  openplex-gl.h  sha1.cc  sha1.h  utils.cc  utils.h
src/context/: Display.hh  GLContext.hh  GameContext.hh  Player.hh  Renderer.cc  Renderer.hh  SDLContext.hh
src/control/: Input.hh  Zoom.hh  joystick.cc  joystick.h  keyboard.cc  keyboard.h  keys.cc  keys.h  scene.cc  scene.h
src/engine/: anim.cc  anim.h  gamedata.cc  gamedata.h  menulevel.cc  objMurphy.cc  objMurphy.h  timing.cc  timing.h
src/engine/game/: GameState.hh  LevelProject.cpp  LevelState.cc  LevelState.hh
src/graphics/: display.cc  display.h  status.cc  status.h
src/model/: objMurphy.cc  objMurphy.h
src/model/dynamic/: Deterministic.hh  Dynamic.hh  Infinite.hh  Interruptable.hh  NPC.hh
src/model/effects/: Explosion.hh  Vanish.hh
src/model/elements/: Base.hh  Bug.hh  Electron.hh  Element.hh  Exit.hh  FloppyOrange.hh  FloppyRed.hh  FloppyYellow.hh  GravityPort.hh  Hardware.hh  Infotron.hh  Murphy.hh  NPC.hh  Port.hh  RAMChip.hh  SnikSnak.hh  Terminal.hh  Zonk.hh
src/model/game/: GameState.hh
src/model/intent/: Intent.cc  Intent.hh  Variant.hh
src/model/level/: Clock.hh  Direction.hh  Index.hh  Level.hh  Tile.hh
src/model/render/: Progress.hh  StaticTile.hh  TileSet.hh
src/model/rendering/: Progress.hh  StaticTile.hh  TileSet.hh
src/model/rules/: VoidScheduler.hh
src/model/static/: Static.hh  Tile.hh
src/renderer/: Renderer.cc  Renderer.hh
src/renderer/consoleRenderer/: ConsoleRenderer.cc  ConsoleRenderer.hh
(+211 files in other folders)
